# mapreduce

./: .gitignore  CMakeLists.txt  README.md  mr.go  worker.go
cpp/: CMakeLists.txt  performance-analysis.md
cpp/examples/: generate_wordlists.py
cpp/include/: mapreduce.cpp
cpp/src/: coordinator.cpp  worker.cpp
cpp/src/protos/: mapreduce.proto
examples/: wc.cpp
examples/wc/: main.go
include/: mapreduce.hpp
src/: coordinator.cpp  coordinator.h  worker.cpp  worker.h
src/protos/: coordinator.proto
